[package]
name = "redact-crypto"
version = "2.2.1"
authors = ["Alexandre Pauwels <8890201+ajpauwels@users.noreply.github.com>"]
edition = "2018"
license-file = "LICENSE"
description = "Crypto abstractions for the Redact framework"
documentation = "https://docs.rs/redact-crypto"
repository = "https://github.com/pauwels-labs/redact-crypto.git"
readme = "README.md"
exclude = [
        ".dockerignore",
        ".gitignore",
        ".lighthouse",
        "Dockerfile.test",
        "OWNERS",
        "OWNERS_ALIASES"
]

[dependencies]
async-trait = "0.1.51"
serde = { version = "1.0.125", features = ["derive"] }
sodiumoxide = "0.2.7"
futures = "0.3.16"
mongodb = "2.0.0-beta.3"
reqwest = { version = "0.11.4", features = ["json"] }
serde_json = "1.0.64"
hex = "0.4.3"
uuid = { version = "0.8.2", features = ["v4", "serde"] }
base64 = "0.13.0"
once_cell = "1.8.0"
ring = { version = "0.16.20", features = ["std"] }
async-recursion = "0.3.2"
mockall = "0.10.2"
cloud-storage = "0.10"
der = { git = "https://github.com/ajpauwels/utils", rev = "9f303824463e8ca93d4cacc869aea6196d97eb36", features = ["oid", "alloc", "std", "derive"] }
serde_bytes = "0.11.5"
spki = "0.4.0"
x509 = "0.2.0"
cookie-factory = "0.3.2"
strum = { version = "0.21", features = ["derive"] }

[dev-dependencies]
tokio = { version = "1.7.1", features = ["macros", "rt-multi-thread"] }
chrono = "0.4.19"
